# blog

./: Pipfile  README.md  archives.html  authors.html  categories.html  hooks-no-mercurial.html  index.html  meld-merge-encoding.html  pattern-matching-list.html  pelicanconf.py  publishconf.py  pyproject.toml  sqlachemy-primary-key-sysdate-oracle-problema.html  tag-com-mesmo-nome-do-branch.html  tags.html
author/: bernardo-gomes.html
category/: elm-lang.html  mercurial-scm.html  outros.html  python.html
content/: meld-merge-codigo-com-codificacao-japonesa-chinesa.md
content/elm/: pattern-matching-list.md  select-multiplas-escolhas.md
content/mercurial_scm/: creating_hooks.md  tag_with_same_name_of_branch.md
content/python/: mock-spec.md  sqlachemy-primary-key-sysdate-oracle-problema.md
drafts/: pattern-matching-list.html  select-multiplas-escolhas.html
feeds/: all.atom.xml  outros.atom.xml  python.atom.xml
output/: categories.html
output/author/: bernardo-gomes.html
output/tag/: linux.html  merge.html  scm.html
tag/: elm.html  hg.html  hook.html  hooks.html  linux.html  mercurial.html  merge.html  oracle.html  scm.html  sqlalchemy.html  sysdate.html
